// Copyright 2024 bbaa
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "git.bbaa.fun/bbaa/minecraft-plugin-daemon/manager";

enum MinecraftState {
  stopped = 0;
  running = 1;
}

message WriteRequest {
  uint64 id = 1;
  string content = 2;
  Client client = 3;
}

message MessageResponse {
  uint64 id = 1 ;
  string type = 2;
  string content = 3;
  bool locked = 4;
}

message StartRequest {
  string path = 1;
  Client client = 2;
}

message Client {
  uint64 id = 1;
}

message StatusResponse {
  MinecraftState state = 1;
  uint64 usedmemory = 2;
}

service Manager {
  rpc Lock(Client) returns (google.protobuf.Empty) {}
  rpc Unlock(Client) returns (google.protobuf.Empty) {}
  rpc Write(WriteRequest) returns(google.protobuf.Empty) {}
  rpc Message(Client) returns(stream MessageResponse) {}
  rpc Start(StartRequest) returns(StatusResponse) {}
  rpc Stop(Client) returns(google.protobuf.Empty) {}
  rpc Status(Client) returns(StatusResponse) {}
  rpc Login(google.protobuf.Empty) returns(Client) {}
}